fixed some of the breakpoints spacing for the header

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,11 @@
   }
 
   .responsive-width {
-    @apply 2xl:max-w-[1600px] 2xl:w-[70%] xl:w-[80%] lg:w-[90%] md:w-[90%] w-[90%];
+    @apply 2xl:max-w-[1660px] 2xl:w-[90%] xl:w-[90%] lg:w-[90%] md:w-[90%] w-[90%];
+  }
+
+  .responsive-width-pb {
+    @apply 2xl:mb-[10%] lg:mb-[10%];
   }
 
   :root {
